**Refactor project handling to use enum for better consistency**
Replaced project strings with a `Project` enum across the codebase to improve type safety and consistency. Updated relevant models, services, and templates to adapt to the new structure, ensuring support for project-specific logic and validation. Additionally, enhanced UI forms and backend APIs for streamlined project management.